# ApexStore

./: .env.example  404.html  CHANGELOG.md  CHANGELOG_v1.5.md  CONFIGURATION.html  CONTRIBUTING.html  Cargo.toml  Dockerfile  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  SETUP.html  book.toml  docker-compose.yml  index.html  print.html  searchindex.js  searchindex.json
.github/: CI_CD_SUMMARY.md  POST_MERGE_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  deploy-docs.yml  develop-to-release.yml  feature-fix-workflow.yml  pr-validation.yml  release-workflow.yml  release.yml  test.yml
book/: 404.html  CONFIGURATION.html  CONTRIBUTING.html  SETUP.html  index.html  print.html  searcher-c2a407aa.js  searchindex-791ed68c.js  toc-26703c44.js  toc.html
docs/: AUTHENTICATION.md  CLI_GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  RELEASE_NOTES_v1.3.0.md  SETUP.md  SUMMARY.md  WORKFLOWS.md
docs/implementation-plans/: IMPLEMENTATION_PLAN_31_36.md
examples/: batch_data.txt
src/: lib.rs  main.rs
src/api/: config.rs  mod.rs
src/api/auth/: error.rs  manager.rs  middleware.rs  mod.rs  token.rs
src/cli/: mod.rs
src/core/: engine.rs  memtable.rs  mod.rs
src/features/: mod.rs
src/infra/: config.rs
src/storage/: block.rs  builder.rs  cache.rs  iterator.rs  mod.rs  reader.rs  sst_iterator.rs
tests/: integration_sstable_v2.rs  restart.rs
