[package]
name = "apexstore"
version = "2.1.0"
edition = "2024"
authors = ["Elio Neto <netoo.elio@hotmail.com>"]
description = "High-performance LSM-Tree Key-Value Store in Rust"
repository = "https://github.com/ElioNeto/ApexStore"
homepage = "https://github.com/ElioNeto/ApexStore"
license = "MIT"
keywords = ["database", "lsm-tree", "key-value", "storage", "embedded"]
categories = ["database-implementations", "embedded"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3.3"
serde_json = "1.0"

# Checksum & Bloom Filter
crc32fast = "1.3"
bloomfilter = "3"

# Compression
lz4_flex = "0.11"

# Caching
lru = "0.12"

# Error handling
thiserror = "1.0"

# Logging & debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# Authentication (optional, enabled with api feature)
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.21", optional = true }
rand = { version = "0.8", optional = true }

# HTTP Server (opcionais)
actix-web = { version = "4", optional = true }
actix-web-httpauth = { version = "0.8", optional = true }
actix-cors = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bin]]
name = "apexstore"
path = "src/main.rs"

[[bin]]
name = "apexstore-server"
path = "src/bin/server.rs"
required-features = ["api"]

[features]
default = []
api = ["actix-web", "actix-web-httpauth", "actix-cors", "tokio", "dotenvy", "uuid", "sha2", "base64", "rand"]
