[package]
name = "apexstore"
version = "2.1.0"
edition = "2021"
authors = ["Elio Neto <netoo.elio@hotmail.com>"]
license = "MIT"
repository = "https://github.com/ElioNeto/ApexStore"
description = "A high-performance LSM-tree storage engine with SSTable V2 format"

[[bin]]
name = "apexstore-server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[lib]
name = "apexstore"
path = "src/lib.rs"

[features]
default = ["api"]
api = []

[dependencies]
bloomfilter = "3.0"
bincode = "1.3"
lz4_flex = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
twox-hash = "2.1"
lru = "0.12"
rayon = "1.11"
uuid = { version = "1.22", features = ["v4", "serde"] }
actix-web = "4.12"
actix-rt = "2.11"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
tokio = { version = "1.49", features = ["full"] }
dotenvy = "0.15"
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.24"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
