[package]
name = "apex-store-rs"
version = "2.1.0"
edition = "2021"
authors = ["Elio Neto <netoo.elio@hotmail.com>"]
license = "MIT"
repository = "https://github.com/ElioNeto/ApexStore"
homepage = "https://github.com/ElioNeto/ApexStore"
documentation = "https://elioneto.github.io/ApexStore/"
readme = "README.md"
description = "A high-performance, embedded LSM-tree storage engine with SSTable V2 format, LZ4 compression, and Bloom Filters."
keywords = ["database", "lsm-tree", "key-value", "storage-engine", "embedded"]
categories = ["database-implementations", "data-structures"]
exclude = [
    "data/*",
    "target/*",
    "*.sst",
    "*.log",
    ".env",
    "docs/assets/*"
]

[[bin]]
name = "apexstore-server"
path = "src/bin/server.rs"

[[bin]]
name = "apexstore-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "apexstore-tui"
path = "src/bin/tui.rs"

[lib]
name = "apexstore"
path = "src/lib.rs"

[features]
default = ["api"]
api = []

[dependencies]
bloomfilter = "3.0"
bincode = "1.3"
lz4_flex = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
twox-hash = "2.1"
lru = "0.12"
rayon = "1.11"
uuid = { version = "1.22", features = ["v4", "serde"] }
actix-web = "4.12"
actix-rt = "2.11"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
tokio = { version = "1.49", features = ["full"] }
dotenvy = "0.15"
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
# TUI dependencies
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
chrono = "0.4"
tui-input = "0.10"

[dev-dependencies]
tempfile = "3.24"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
